Fix Colab notebook JSON format

--- a/colab_gpu_training.ipynb
+++ b/colab_gpu_training.ipynb
@@ -1,13 +1,110 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"gpuType":"T4"},"kernelspec":{"name":"python3","display_name":"Python 3"},"accelerator":"GPU"},"cells":[{"cell_type":"markdown","metadata":{},"source":["# GPU Training for Neural Circuit Designer"]},{"cell_type":"code","metadata":{},"source":["!git clone https://github.com/tusharpathaknyu/neural-surrogate-rl-circuits.git
-","%cd neural-surrogate-rl-circuits"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{},"source":["!pip install torch numpy matplotlib tqdm"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{},"source":["import torch; print(torch.cuda.is_available(), torch.cuda.get_device_name(0) if torch.cuda.is_available() else None)"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{},"source":["from google.colab import files
-","import os
-","os.makedirs(\"checkpoints\", exist_ok=True)
-","uploaded = files.upload()
-","for f in uploaded: os.rename(f, f\"checkpoints/{f}\")"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{},"source":["import sys; sys.path.append(\".\")
-","from models.multi_topology_surrogate import load_trained_model
-","from rl.train_per_topology_agents import train_single_topology
-","s = load_trained_model(device=\"cuda\")
-","for t in [\"buck\",\"boost\",\"buck_boost\",\"sepic\",\"cuk\",\"flyback\"]: print(train_single_topology(t, s))"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{},"source":["from google.colab import files
-","import shutil
-","shutil.make_archive(\"agents\", \"zip\", \"checkpoints\")
-","files.download(\"agents.zip\")"],"execution_count":null,"outputs":[]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "accelerator": "GPU"
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Neural Surrogate RL Training - GPU Accelerated\n",
+        "\n",
+        "Train per-topology RL agents using Colab T4 GPU.\n",
+        "\n",
+        "**Steps:**\n",
+        "1. Runtime > Change runtime type > T4 GPU\n",
+        "2. Run all cells\n",
+        "3. Upload multi_topology_surrogate.pt when prompted\n",
+        "4. Download agents.zip when done"
+      ],
+      "metadata": {
+        "id": "intro"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "setup"
+      },
+      "outputs": [],
+      "source": [
+        "!git clone https://github.com/tusharpathaknyu/neural-surrogate-rl-circuits.git\n",
+        "%cd neural-surrogate-rl-circuits\n",
+        "!pip install torch numpy matplotlib tqdm"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "print(f'CUDA available: {torch.cuda.is_available()}')\n",
+        "if torch.cuda.is_available():\n",
+        "    print(f'GPU: {torch.cuda.get_device_name(0)}')\n",
+        "    print(f'Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.1f} GB')"
+      ],
+      "metadata": {
+        "id": "gpu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "import os\n",
+        "os.makedirs('checkpoints', exist_ok=True)\n",
+        "print('Upload multi_topology_surrogate.pt:')\n",
+        "uploaded = files.upload()\n",
+        "for f in uploaded:\n",
+        "    if 'surrogate' in f:\n",
+        "        os.rename(f, f'checkpoints/{f}')\n",
+        "        print(f'Moved to checkpoints/')"
+      ],
+      "metadata": {
+        "id": "upload"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python rl/train_per_topology_agents.py"
+      ],
+      "metadata": {
+        "id": "train"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import shutil\n",
+        "from google.colab import files\n",
+        "shutil.make_archive('agents', 'zip', 'checkpoints')\n",
+        "print('Downloading agents.zip...')\n",
+        "files.download('agents.zip')"
+      ],
+      "metadata": {
+        "id": "download"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
