--- a/colab_gpu_training.ipynb
+++ b/colab_gpu_training.ipynb
@@ -18,27 +18,21 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Neural Surrogate RL Training - GPU Accelerated\n",
-        "\n",
-        "Train per-topology RL agents using Colab T4 GPU.\n",
-        "\n",
-        "**Steps:**\n",
-        "1. Runtime > Change runtime type > T4 GPU\n",
-        "2. Run all cells\n",
-        "3. Upload multi_topology_surrogate.pt when prompted\n",
-        "4. Download agents.zip when done"
-      ],
       "metadata": {
         "id": "intro"
-      }
+      },
+      "source": [
+        "# GPU Training for Neural Surrogate RL Agents\n",
+        "\n",
+        "Steps: 1) Set T4 GPU 2) Run cells 3) Upload model 4) Download results"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "setup"
       },
+      "execution_count": null,
       "outputs": [],
       "source": [
         "!git clone https://github.com/tusharpathaknyu/neural-surrogate-rl-circuits.git\n",
@@ -48,63 +42,58 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import torch\n",
-        "print(f'CUDA available: {torch.cuda.is_available()}')\n",
-        "if torch.cuda.is_available():\n",
-        "    print(f'GPU: {torch.cuda.get_device_name(0)}')\n",
-        "    print(f'Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.1f} GB')"
-      ],
       "metadata": {
         "id": "gpu"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "print(torch.cuda.is_available())\n",
+        "if torch.cuda.is_available():\n",
+        "    print(torch.cuda.get_device_name(0))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import files\n",
-        "import os\n",
-        "os.makedirs('checkpoints', exist_ok=True)\n",
-        "print('Upload multi_topology_surrogate.pt:')\n",
-        "uploaded = files.upload()\n",
-        "for f in uploaded:\n",
-        "    if 'surrogate' in f:\n",
-        "        os.rename(f, f'checkpoints/{f}')\n",
-        "        print(f'Moved to checkpoints/')"
-      ],
       "metadata": {
         "id": "upload"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from google.colab import files\n",
+        "import os\n",
+        "os.makedirs('checkpoints', exist_ok=True)\n",
+        "uploaded = files.upload()\n",
+        "for f in uploaded:\n",
+        "    os.rename(f, 'checkpoints/' + f)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python rl/train_per_topology_agents.py"
-      ],
       "metadata": {
         "id": "train"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!python rl/train_per_topology_agents.py"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import shutil\n",
-        "from google.colab import files\n",
-        "shutil.make_archive('agents', 'zip', 'checkpoints')\n",
-        "print('Downloading agents.zip...')\n",
-        "files.download('agents.zip')"
-      ],
       "metadata": {
         "id": "download"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import shutil\n",
+        "from google.colab import files\n",
+        "shutil.make_archive('agents', 'zip', 'checkpoints')\n",
+        "files.download('agents.zip')"
+      ]
     }
   ]
 }
